--- a/templates/glaucoma/index.html
+++ b/templates/glaucoma/index.html
@@ -21,12 +21,12 @@
       referrerpolicy="no-referrer"
     ></script>
 
-    <title> Glaucoma Prediction </title>
+    <title>Glaucoma Prediction</title>
   </head>
   <body>
     <div class="container-xxl">
       <div class="row text-center">
-        <h1> Glaucoma Prediction </h1>
+        <h1>Glaucoma Prediction</h1>
       </div>
       <div class="row align-items-center">
         <div class="card col-md-4 mx-auto">
@@ -61,7 +61,7 @@
                 </button>
               </div>
               <div class="col-lg-5 pt-1">
-                <p class="Classification">  </p>
+                <p class="Classification"></p>
               </div>
             </div>
             <div class="my-3 text-center">
@@ -77,12 +77,16 @@
         </div>
         <div class="card col-md-5 mx-auto">
           <div class="card-header text-center">Input Image</div>
-          <img
-            id="imageshow"
-            src=""
-            class="card-img-top"
-            alt="..."
-          />
+          <div class="row h-100 justify-content-center align-items-center">
+            <img
+              id="imageshow"
+              src=""
+              class="align-self-center"
+              height="0px"
+              width="0px"
+              style="aspect-ratio: unset; box-sizing: content-box"
+            />
+          </div>
         </div>
       </div>
     </div>
@@ -93,6 +97,17 @@
       crossorigin="anonymous"
     ></script>
     <script type="text/javascript">
+      const imageget = document.getElementById("imageshow");
+      imageget.addEventListener("load", () => {
+        console.log("image");
+        if (imageget.src === "") {
+          imageget.style.width = "0px";
+          imageget.style.height = "0px";
+        } else {
+          imageget.style.width = "349px";
+          imageget.style.height = "349px";
+        }
+      });
       let fileData = new FormData();
       function showPreview(event) {
         if (event.target.files.length > 0) {
@@ -108,13 +123,15 @@
       }
       function getCookie(name) {
         let cookieValue = null;
-        if (document.cookie && document.cookie !== '') {
-          const cookies = document.cookie.split(';');
+        if (document.cookie && document.cookie !== "") {
+          const cookies = document.cookie.split(";");
           for (let i = 0; i < cookies.length; i++) {
             const cookie = cookies[i].trim();
             // Does this cookie string begin with the name we want?
-            if (cookie.substring(0, name.length + 1) === (name + '=')) {
-              cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+            if (cookie.substring(0, name.length + 1) === name + "=") {
+              cookieValue = decodeURIComponent(
+                cookie.substring(name.length + 1)
+              );
               break;
             }
           }
@@ -126,15 +143,16 @@
           .post("", fileData, {
             headers: {
               "Content-Type": "multipart/form-data",
-              "X-CSRFToken": getCookie("csrftoken"), 
+              "X-CSRFToken": getCookie("csrftoken"),
             },
           })
           .then((response) => {
             console.log(response);
-            document.getElementsByClassName('Classification')[0].textContent = response.data.label;
+            document.getElementsByClassName("Classification")[0].textContent =
+              response.data.label;
           })
           .then((error) => {
-            console.log(error); 
+            console.log(error);
           });
       }
     </script>
