--- a/templates/kidney/kidney.html
+++ b/templates/kidney/kidney.html
@@ -81,14 +81,14 @@
           <div class="card-header text-center">Input Kidney MIR</div>
           <img
             id="imageshow"
-            src="./Screenshot (224).png"
+            src=""
             class="card-img-top"
-            alt="..."
+            alt=""
           />
         </div>
         <div class="card col-md-4 mx-auto">
           <div class="card-header text-center">Tumor Localization</div>
-          <img src="./Screenshot (224).png" class="card-img-top" alt="..." />
+          <img src="" class="card-img-top" alt="" />
         </div>
       </div>
     </div>
